# VIW-Fusion

camera_models/: CMakeLists.txt  package.xml
config/: vins_rviz_config.rviz
config/OpenORIS/: d400.yaml  d400_mono_imu_config.yaml  realsense_stereo_imu_config.yaml  t265_left.yaml  t265_right.yaml  t265_stereo_imu_config.yaml
config/courier/: zed2_imu_se2_config.yaml  zed2_left.yaml  zed2_left_640x360.yaml  zed2_left_640x480.yaml  zed2_left_848x480.yaml  zed2_right_1280x720.yaml  zed2_stereo_imu_config.yaml  zed2_stereo_imu_config_best.yaml
config/ozyland/: ozyland.yaml  ozyland_vwo_config.yaml
config/realsense_d435i/: realsense_stereo_imu_config_ridgeback.yaml
global_fusion/: CMakeLists.txt  package.xml
global_fusion/src/: globalOpt.cpp  globalOpt.h  globalOptNode.cpp
loop_fusion/: CMakeLists.txt  package.xml
loop_fusion/src/: keyframe.cpp  parameters.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
loop_fusion/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h
output/: extrinsic_parameter.csv  vio.csv  vio_loop.csv
script/: perturb_gravity.py  transform.py
vins_estimator/: CMakeLists.txt  package.xml
vins_estimator/launch/: courier_viwo.launch  ozyland_vwo.launch
vins_estimator/src/: rosNodeTest.cpp  rosNodeTestWheel.cpp
vins_estimator/src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
vins_estimator/src/factor/: imu_factor.h  integration_base.h  marginalization_factor.h  pose_local_parameterization.cpp  wheel_integration_base.h
vins_estimator/src/featureTracker/: feature_tracker.cpp  feature_tracker.h
vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.h  initial_sfm.cpp  initial_sfm.h  solve_5pts.h
vins_estimator/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  visualization.cpp  visualization.h
